overlays/githash/svc-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service-test
spec:
  selector:
    gitHash: "502d0bd"
